Organiznado páginas e imagens

--- a/src/pages/historia.html
+++ b/src/pages/historia.html
@@ -13,9 +13,9 @@
                 <ul>
                     <li><a href="../../index.html">Início</a></li>
                     <li><a href="./src/pages/historia.html">História</a></li>
-                    <li><a href="./src/pages/vinho_branco.html">Vinho Branco</a></li>
-                    <li><a href="./src/pages/vinho_tinto.html">Vinho Tinto</a></li>
-                    <li><a href="./src/pages/vinho_rose.html">Vinho Rose</a></li>
+                    <li><a href="./src/pages/vinhoBranco.html">Vinho Branco</a></li>
+                    <li><a href="./src/pages/vinhoTinto.html">Vinho Tinto</a></li>
+                    <li><a href="./src/pages/vinhoRose.html">Vinho Rose</a></li>
                 </ul>
             </nav>
     </header>
@@ -24,7 +24,7 @@
 <main>
     <h2>História</h2>
     <h3>O início da vinicultura</h3>
-    <img src="../assets/historia.jpg" alt="Início da Vinicultura" class="imagem-historia">
+    <img src="../assets/images/historia.jpg" alt="Início da Vinicultura" class="imagem-historia">
     <p>
         A Vinheria Agnello iniciou suas atividades em São Paulo há mais de 15 anos, 
 contando com apenas uma loja física onde coloca à disposição do mercado uma 
