--- a/src/pages/vinhoRose.html
+++ b/src/pages/vinhoRose.html
@@ -1,24 +1,84 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vinharia Agnello</title>
-    <link rel="stylesheet" href="../css/style.css">
+   
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="Detalhes do vinho Perrier-Jouet Belle Epoque Rosé, harmonização e informações nutricionais.">
+<meta name="keywords" content="vinho rosé, Perrier-Jouet, harmonização, informações nutricionais, vinho">
+  
+    <title>Perrier-Jouet Belle Epoque Rosé</title>   
+    <link rel="stylesheet" href="../css/rose.css">
+
 </head>
+
 <body>
     <header>
-        <h1 id="Logo">Vinharia Agnello</h1>       
-            <nav>
-                <ul>
-                    <li><a href="../../index.html">Início</a></li>
-                    <li><a href="./src/pages/historia.html">História</a></li>
-                    <li><a href="./src/pages/vinho_branco.html">Vinho Branco</a></li>
-                    <li><a href="./src/pages/vinho_tinto.html">Vinho Tinto</a></li>
-                    <li><a href="./src/pages/vinho_rose.html">Vinho Rose</a></li>
-                </ul>
-            </nav>
+        <h1>Perrier-Jouet Belle Epoque Rosé</h1>
+        <br>
+        <div style="text-align:center;">
+            <a href="../../index.html" class="btn-inicio">Início</a>
+        </div>
     </header>
-    
+    <div class="container">
+        <div class="preco">
+            <br>
+            <br>
+            <img src="../assets/images/rose_imagens/Perrier-Jouet-Belle-Epoque-Rose.jpg" alt="Perrier-Jouet Belle Epoque Rosé">
+            <br>
+            <h4>805,90R$</h4>
+        </div>
+
+        <br>
+        <br>
+
+        <h2>Harmonização</h2>
+        <br>
+        <div class="harmonizacao">
+            <div class="item">
+                <img src="../assets/images/rose_imagens/sushicheckpoint1.jpg" alt="Sushi">
+                <h3>Sushi</h3>
+            </div>
+            <div class="item">
+                <img src="../assets/images/rose_imagens/queijocheckpoint1.jpg" alt="Queijo Brie">
+                <h3>Queijo Brie</h3>
+            </div>
+            <div class="item">
+                <img src="../assets/images/rose_imagens/frutasvermelhascheckpoint1.jpg" alt="Frutas Vermelhas">
+                <h3>Frutas Vermelhas</h3>
+            </div>
+        </div>
+
+        <br>
+        <br>
+        <br>
+        <br>
+
+        <h2>Informações Nutricionais</h2>
+        <table border>
+            <tr>
+                <th>Componentes</th>
+                <th>Quantidade por taça (150ml)</th>
+            </tr>
+            <tr>
+                <td>Calorias</td>
+                <td>120 kcal</td>
+            </tr>
+            <tr>
+                <td>Carboidratos</td>
+                <td>4g</td>
+            </tr>
+            <tr>
+                <td>Açúcares</td>
+                <td>1g</td>
+            </tr>
+            <tr>
+                <td>Álcool</td>
+                <td>12,5%</td>
+            </tr>
+        </table>
+    </div>
 </body>
+
 </html>
