--- a/src/pages/vinhoBranco.html
+++ b/src/pages/vinhoBranco.html
@@ -1,23 +1,82 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vinharia Agnello</title>
-    <link rel="stylesheet" href="../css/style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="Detalhes do vinho Perrier-Jouet Belle Epoque Rosé, harmonização e informações nutricionais.">
+<meta name="keywords" content="vinho rosé, Perrier-Jouet, harmonização, informações nutricionais, vinho">
+    <title>Gaja Rossj-Bass Chardonnay/ Sauvignon Blanc</title>
+   
+    <link rel="stylesheet" href="../css/branco.css">
 </head>
+
 <body>
     <header>
-        <h1 id="Logo">Vinharia Agnello</h1>       
-            <nav>
-                <ul>
-                    <li><a href="../../index.html">Início</a></li>
-                    <li><a href="./src/pages/historia.html">História</a></li>
-                    <li><a href="./src/pages/vinho_branco.html">Vinho Branco</a></li>
-                    <li><a href="./src/pages/vinho_tinto.html">Vinho Tinto</a></li>
-                    <li><a href="./src/pages/vinho_rose.html">Vinho Rose</a></li>
-                </ul>
-            </nav>
+        <h1>Gaja Rossj-Bass Chardonnay/ Sauvignon Blanc</h1>
+        <br>
+        <div style="text-align:center;">
+            <a href="../../index.html" class="btn-inicio">Início</a>
+        </div>
     </header>
+    <div class="container">
+        <div class="preco">
+            <br>
+            <br>
+            <img src="../assets/images/branco_imagens/vinhobrancocomgarrafa.jpg" alt="Gaja Rossj-Bass chardonnay/ Sauvignon Blanc">
+            <br>
+            <h4>1.499R$</h4>
+        </div>
+
+        <br>
+        <br>
+
+        <h2>Harmonização</h2>
+        <br>
+        <div class="harmonizacao">
+            <div class="item">
+                <img src="../assets/images/rose_imagens/queijocheckpoint1.jpg" alt="Queijos Macios">
+                <h3>Queijos de Cabra/Macios</h3>
+            </div>
+            <div class="item">
+                <img src="../assets/images/branco_imagens/peixesgrelhados.jpg" alt="Peixes Gordurosos Grelhados">
+                <h3>Peixes Gordurosos Grelhados</h3>
+            </div>
+            <div class="item">
+                <img src="../assets/images/branco_imagens/legumes.webp" alt="Legumes e Ervas Frescas">
+                <h3>Legumes ou Ervas Frescas</h3>
+            </div>
+        </div>
+
+        <br>
+        <br>
+        <br>
+        <br>
+
+        <h2>Informações Nutricionais</h2>
+        <table border>
+            <tr>
+                <th>Componentes</th>
+                <th>Quantidade por taça (150ml)</th>
+            </tr>
+            <tr>
+                <td>Calorias</td>
+                <td>122 kcal</td>
+            </tr>
+            <tr>
+                <td>Carboidratos</td>
+                <td>3,8g</td>
+            </tr>
+            <tr>
+                <td>Açúcares</td>
+                <td>1,4g</td>
+            </tr>
+            <tr>
+                <td>Álcool</td>
+                <td>13,5%</td>
+            </tr>
+        </table>
+    </div>
 </body>
+
 </html>
