--- a/src/pages/vinhoTinto.html
+++ b/src/pages/vinhoTinto.html
@@ -1,24 +1,85 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Site da Vinharia Agnello, vinhos especiais e informações sobre o mundo dos vinhos.">
+    <meta name="keywords" content="vinhos, vinho branco, vinho tinto, vinho rose, Vinharia Agnello">
     <title>Vinharia Agnello</title>
-    <link rel="stylesheet" href="../css/style.css">
+    ...
 </head>
+    <title>Don Melchor Cabernet Sauvignon</title>
+    <link css rel="stylesheet" href="../css/tinto.css">
+   
 <body>
     <header>
-        <h1 id="Logo">Vinharia Agnello</h1>       
-            <nav>
-                <ul>
-                    <li><a href="../../index.html">Início</a></li>
-                    <li><a href="./src/pages/historia.html">História</a></li>
-                    <li><a href="./src/pages/vinho_branco.html">Vinho Branco</a></li>
-                    <li><a href="./src/pages/vinho_tinto.html">Vinho Tinto</a></li>
-                    <li><a href="./src/pages/vinho_rose.html">Vinho Rose</a></li>
-                </ul>
-            </nav>
+        <h1>Don Melchor Cabernet Sauvignon</h1>
+        <br>
+        <div style="text-align:center;">
+            <a href="../../index.html" class="btn-inicio">Início</a>
+        </div>
     </header>
-    
+
+    <div class="container">
+        <div class="preco">
+            <br>
+            <br>
+            <img src="../assets/images/tinto_imagens/donmelchiorwinner.jpeg" alt="Don Melchor Cabernet Sauvignon">
+            <br>
+            <h4>1.250R$</h4>
+        </div>
+
+        <br>
+        <br>
+
+        <h2>Harmonização</h2>
+        <br>
+        <div class="harmonizacao">
+            <div class="item">
+                <img src="../assets/images/tinto_imagens/cogumelos.webp" alt="cogumelos">
+                <h3>Pratos Com Cogumelos</h3>
+            </div>
+            <div class="item">
+                <img src="../assets/carnevermelha.webp" alt="Carne Vermlha">
+                <h3>Carne Vermelha</h3>
+            </div>
+            <div class="item">
+                <img src="../assets/images/tinto_imagens/queijoscurados.webp" alt="Queijos Curados">
+                <h3>Queijos Curados</h3>
+            </div>
+        </div>
+
+        <br>
+        <br>
+        <br>
+        <br>
+
+        <h2>Informações Nutricionais</h2>
+        <table border>
+            <tr>
+                <th>Componentes</th>
+                <th>Quantidade por taça (100ml)</th>
+            </tr>
+            <tr>
+                <td>Calorias</td>
+                <td>86 kcal</td>
+            </tr>
+            <tr>
+                <td>Carboidratos</td>
+                <td>3,2g</td>
+            </tr>
+            <tr>
+                <td>Açúcares</td>
+                <td>0,3g</td>
+            </tr>
+            <tr>
+                <td>Álcool</td>
+                <td>14%</td>
+            </tr>
+        </table>
+    </div>
 </body>
+
 </html>
