Criando pseudo-elementos

--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
     </main>
     <footer>
         <section class="contato">
-            <h2>Contato</h2>
+            <h2 class="contato-titulo">Contato</h2>
             <p>Telefone: (11) 94596-9329</p>
             <p>Email:contato@vinhariaagnello.com</p>
             <p>Localização: São Paulo - SP</p>
         </section>
-        <section>
-            <h2>Fale Conosco</h2>
+        <section class="formulario">
+            <h2 class="faleconosco-titulo">Fale Conosco</h2>
             <form>
                 <label for="nome">Nome:</label>
                 <input type="text" id="nome" name="nome" required>
