--- a/src/pages/historia.html
+++ b/src/pages/historia.html
@@ -25,8 +25,8 @@
     <h2>História</h2>
     <h3>O início da vinicultura</h3>
     <img src="../assets/images/historia.jpg" alt="Início da Vinicultura" class="imagem-historia">
-    <p>
-        A Vinheria Agnello iniciou suas atividades em São Paulo há mais de 15 anos, 
+    <p class="primeira-letra">
+     A Vinheria Agnello iniciou suas atividades em São Paulo há mais de 15 anos, 
 contando com apenas uma loja física onde coloca à disposição do mercado uma 
 vasta gama de rótulos de vinícolas nacionais e internacionais.  
 Um de seus principais diferenciais é o preparo 
@@ -89,13 +89,13 @@ vinícolas de origem.
 </main>
  <footer>
         <section>
-            <h2>Contato</h2>
+            <h2 class="contato-titulo">Contato</h2>
             <p>Telefone: (11) 94596-9329</p>
             <p>Email:contato@vinhariaagnello.com</p>
             <p>Localização: São Paulo - SP</p>
         </section>
-        <section>
-            <h2>Fale Conosco</h2>
+        <section class="formulario">
+            <h2 class="faleconosco-titulo">Fale Conosco</h2>
             <form>
                 <label for="nome">Nome:</label>
                 <input type="text" id="nome" name="nome" required>
