--- a/src/pages/vinhoBranco.html
+++ b/src/pages/vinhoBranco.html
@@ -23,7 +23,7 @@
         <div class="preco">
             <br>
             <br>
-            <img src="../assets/images/branco_imagens/vinhobrancocomgarrafa.jpg" alt="Gaja Rossj-Bass chardonnay/ Sauvignon Blanc">
+            <img src="../assets/images/branco_imagens/vinhobrancocomgarrafa.jpg" alt="Gaja Rossj-Bass chardonnay/ Sauvignon Blanc" class="vinho-principal">
             <br>
             <h4>1.499R$</h4>
         </div>
