--- a/src/pages/vinhoRose.html
+++ b/src/pages/vinhoRose.html
@@ -25,7 +25,7 @@
         <div class="preco">
             <br>
             <br>
-            <img src="../assets/images/rose_imagens/Perrier-Jouet-Belle-Epoque-Rose.jpg" alt="Perrier-Jouet Belle Epoque Rosé">
+            <img src="../assets/images/rose_imagens/Perrier-Jouet-Belle-Epoque-Rose.jpg" alt="Perrier-Jouet Belle Epoque Rosé"class="vinho-principal">
             <br>
             <h4>805,90R$</h4>
         </div>
