--- a/src/pages/vinhoTinto.html
+++ b/src/pages/vinhoTinto.html
@@ -42,7 +42,7 @@
                 <h3>Pratos Com Cogumelos</h3>
             </div>
             <div class="item">
-                <img src="../assets/carnevermelha.webp" alt="Carne Vermlha">
+                <img src="../assets/images/tinto_imagens/carnevermelha.jpg" alt="Carne Vermelha">
                 <h3>Carne Vermelha</h3>
             </div>
             <div class="item">
