Arrumando rota do header

--- a/src/pages/historia.html
+++ b/src/pages/historia.html
@@ -12,10 +12,10 @@
             <nav>
                 <ul>
                     <li><a href="../../index.html">Início</a></li>
-                    <li><a href="./src/pages/historia.html">História</a></li>
-                    <li><a href="./src/pages/vinhoBranco.html">Vinho Branco</a></li>
-                    <li><a href="./src/pages/vinhoTinto.html">Vinho Tinto</a></li>
-                    <li><a href="./src/pages/vinhoRose.html">Vinho Rose</a></li>
+                    <li><a href="./historia.html">História</a></li>
+                    <li><a href="./vinhoBranco.html">Vinho Branco</a></li>
+                    <li><a href="./vinhoTinto.html">Vinho Tinto</a></li>
+                    <li><a href="./vinhoRose.html">Vinho Rose</a></li>
                 </ul>
             </nav>
     </header>
