Finalizando a estilização do background das páginas

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+    <div id="grad">
     <header>
         <h1 id="Logo">Vinharia Agnello</h1>
         <nav>
@@ -92,6 +93,7 @@
             <p>&copy; 2025 Vinharia Agnello - Todos os direitos reservados</p>
         </div>
     </footer>
+    </div>
 
 
 
