--- a/src/pages/historia.html
+++ b/src/pages/historia.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
+    <div id="grad">
     <header>
         <h1 id="Logo">Vinharia Agnello</h1>       
             <nav>
@@ -114,6 +115,7 @@ vinícolas de origem.
             <p>&copy; 2025 Vinharia Agnello - Todos os direitos reservados</p>
         </div>
     </footer>
+    </div>
 
 </body>
 </html>
