--- a/src/pages/vinhoRose.html
+++ b/src/pages/vinhoRose.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+    <div id="gradR">
     <header>
         <h1>Perrier-Jouet Belle Epoque Rosé</h1>
         <br>
@@ -78,6 +79,7 @@
                 <td>12,5%</td>
             </tr>
         </table>
+    </div>
     </div>
 </body>
 
