--- a/src/pages/vinhoBranco.html
+++ b/src/pages/vinhoBranco.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <div id="gradB">
     <header>
         <h1>Gaja Rossj-Bass Chardonnay/ Sauvignon Blanc</h1>
         <br>
@@ -76,6 +77,7 @@
                 <td>13,5%</td>
             </tr>
         </table>
+    </div>
     </div>
 </body>
 
